<resources>
    <string name="app_name">PopularMoves</string>
    <string name="account_type">com.yaoxin.example</string>
    <string name="content_authority">yaoxin.example.com.popularmoves</string>
    <string name="account_psw">7256338</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_setting">设置</string>
    <string name="menu_collected">收藏</string>
    <string name="popluarmoves">热门电影</string>
    <string name="moveDetail">电影详情</string>
    <string name="movie">电影</string>
    <string name="setting">设置</string>
    <string name="popularMost">最受欢迎</string>
    <string name="voteMost">评分最高</string>
    <string name="pleaseOnline">请先连接网络</string>
    <string name="todaybest">今日最佳</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loadMore">加载更多</string>
    <string name="share">分享</string>
    <string name="nfc">NFC</string>
    <string name="loadfail">加载失败</string>
    <string name="search">搜索</string>
    <string name="menu_search_hints">搜索热门电影</string>
    <string name="qrcode">二维码</string>
    <string name="open_drawer">opendrawer</string>
    <string name="close_drawer">closedrawer</string>
    <string name="about">关于</string>
    <string name="cinema">电影院</string>
    <string name="help">帮助与反馈</string>
    <string name="video">预告片</string>
    <string name="nowplaying">时下流行</string>
    <string name="toprated">永恒经典</string>
    <string name="loginfailed">登录失败,请重新登录</string>
    <string name="tvShow">TV Show</string>
    <string name="popularPeople">Popular People</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="signin">登录</string>
    <string name="cancel">取消</string>
    <string name="usernamecannotnull">用户名不能为空</string>
    <string name="passwordcannotnull">密码不能为空</string>
    <string name="editvatar">编辑头像</string>
    <string name="takepicture">拍照</string>
    <string name="chosealbum">从相册中选择</string>
    <string name="sure">确定</string>
    <string name="home">主页</string>
    <string name="viewonImdb">在imdb上查看</string>

</resources>
