<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="2"
        android:title="@string/menu_refresh"></item>

    <item
        android:id="@+id/menu_setting"
        android:orderInCategory="1"
        android:title="@string/menu_setting"></item>

    <item
        android:id="@+id/menu_collect"
        android:orderInCategory="3"
        android:title="@string/menu_collected"></item>

    <item
        android:id="@+id/menu_search"
        android:enabled="true"
        android:icon="@mipmap/menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />


</menu>