<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/editvatar"
        android:textColor="@color/black"
        android:textSize="@dimen/text_20_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_B" />

    <TextView
        android:id="@+id/takepicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editavatarselector"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/takepicture"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_B" />

    <TextView
        android:id="@+id/chosealbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editavatarselector"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/chosealbum"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18_size" />


</LinearLayout>